Cache resolution (in DNSResolver) was seriously broken; fixed now (I hope!).  Added IPv6 resolution to DNSResolverAPI and examples.  Added a class to do specific tests in, in the examples package.

--- a/example-logging.properties
+++ b/example-logging.properties
@@ -1,4 +1,4 @@
-# configuration file for test program's logging
+# configuration file for example program logging
 .handlers = java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 .level = FINEST
 
@@ -7,6 +7,7 @@ com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
 com.dilatush.dns.agent.Timeouts.level = INFO
 com.dilatush.dns.cache.level = INFO
+com.dilatush.dns.DNSResolverAPI.level = FINEST
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
 
