--- a/logging.properties
+++ b/logging.properties
@@ -1,4 +1,4 @@
-# configuration file for test program's logging
+# configuration file for test program logging
 .handlers = java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 .level = FINEST
 
