Cleaned up generation of Outcome.notOk().  Causes are now bubbled up to the result, even from deep down.  Also, all not ok outcomes now have a cause, encoded as either DNSServerException or DNSResolverException, with an enum detailing the kind of problem.

--- a/example-logging.properties
+++ b/example-logging.properties
@@ -7,7 +7,7 @@ com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
 com.dilatush.dns.agent.Timeouts.level = INFO
 com.dilatush.dns.cache.level = INFO
-com.dilatush.dns.DNSResolverAPI.level = FINEST
+com.dilatush.dns.DNSResolverAPI.level = INFO
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
 
