Revised how TTLs are created for root hints.

--- a/example-logging.properties
+++ b/example-logging.properties
@@ -2,6 +2,7 @@
 .handlers = java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 .level = FINEST
 
+java.level = INFO
 com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
