Some cleanup in the DNSNIO code, mainly getting rid of things no longer needed, and simplifying the code in the IO Runner loop a bit...

--- a/example-logging.properties
+++ b/example-logging.properties
@@ -3,10 +3,12 @@
 .level = FINEST
 
 java.level = INFO
+javax.level = INFO
 com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
 com.dilatush.dns.agent.Timeouts.level = INFO
+com.dilatush.dns.agent.DNSNIO.level = FINEST
 com.dilatush.dns.cache.level = INFO
 com.dilatush.dns.DNSResolverAPI.level = INFO
 
