--- a/logging.properties
+++ b/logging.properties
@@ -3,6 +3,7 @@
 .level = FINEST
 
 java.level = INFO
+javax.level = INFO
 com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = FINEST
