Commenting, cleanup, refactoring...

--- a/logging.properties
+++ b/logging.properties
@@ -7,7 +7,7 @@ javax.level = INFO
 com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = FINEST
-com.dilatush.dns.agent.Timeouts.level = INFO
+com.dilatush.dns.query.Timeouts.level = INFO
 com.dilatush.dns.cache.level = INFO
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
