--- a/example-logging.properties
+++ b/example-logging.properties
@@ -7,8 +7,8 @@ javax.level = INFO
 com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
-com.dilatush.dns.agent.Timeouts.level = INFO
-com.dilatush.dns.agent.DNSNIO.level = FINEST
+com.dilatush.dns.query.Timeouts.level = INFO
+com.dilatush.dns.query.DNSNIO.level = FINEST
 com.dilatush.dns.cache.level = INFO
 com.dilatush.dns.DNSResolverAPI.level = INFO
 
