Refactoring for better package layout and naming...

--- a/logging.properties
+++ b/logging.properties
@@ -8,7 +8,7 @@ com.dilatush.util.fsm.level = INFO
 com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = FINEST
 com.dilatush.dns.query.Timeouts.level = INFO
-com.dilatush.dns.cache.level = INFO
+com.dilatush.dns.misc.level = INFO
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
 
