--- a/example-logging.properties
+++ b/example-logging.properties
@@ -9,7 +9,7 @@ com.dilatush.util.SimpleConnectionPool.level = INFO
 com.dilatush.dns.level = INFO
 com.dilatush.dns.query.Timeouts.level = INFO
 com.dilatush.dns.query.DNSNIO.level = FINEST
-com.dilatush.dns.cache.level = INFO
+com.dilatush.dns.misc.level = INFO
 com.dilatush.dns.DNSResolverAPI.level = INFO
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
