--- a/example-logging.properties
+++ b/example-logging.properties
@@ -11,6 +11,7 @@ com.dilatush.dns.query.Timeouts.level = INFO
 com.dilatush.dns.query.DNSNIO.level = FINEST
 com.dilatush.dns.misc.level = INFO
 com.dilatush.dns.DNSResolverAPI.level = INFO
+com.dilatush.dns.query.level = FINEST
 
 sun.net.www.protocol.http.HttpURLConnection.level = WARNING
 
